# bobik

./: .gitignore  README.md  pyproject.toml
src/bobik/: bobik.py  cli.py  prompt.py  tools.py  util.py
